fabric/testdata/out/ing_brexit-mgmt-test-dagordon-get-api-classification-status-rl-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"inlineContentIfStatus(429,
      \"{\\\"title\\\": \\\"Rate limit exceeded\\\", \\\"detail\\\": \\\"See the retry-after
      header for how many seconds to wait before retrying.\\\", \\\"status\\\": 429}\",
      \"application/problem+json\") -\u003e oauthTokeninfoAnyKV(\"realm\", \"/services\",
      \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\") -\u003e oauthTokeninfoAllScope(\"uid\",
      \"brexit-mgmt.read\") -\u003e clusterClientRatelimit(\"brexit-mgmt-test-dagordon_api-classification-status_GET\",
      10000, \"1m\", \"Authorization\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(3) \u0026\u0026
      Path(\"/api/classification-status\") \u0026\u0026 Method(\"GET\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"af1b8cad-f056-41e7-8e1a-388067925e31","deployment-id":"d-gk3e82tg9rbua8u7epih6sm1t","pipeline-id":"l-ngeow7caio7qdeiqsrnrfprjh"},"name":"brexit-mgmt-test-dagordon-get-api-classification-status-rl-all","namespace":"default"},"spec":{"rules":[{"host":"brexit-mgmt-test-dagordon.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"brexit-mgmt-test-dagordon","servicePort":"http"},"pathType":"Impl [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: 'inlineContentIfStatus(429, "{\"title\": \"Rate limit
      exceeded\", \"detail\": \"See the retry-after header for how many seconds to
      wait before retrying.\", \"status\": 429}", "application/problem+json") -> oauthTokeninfoAnyKV("realm",
      "/services", "realm", "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid",
      "brexit-mgmt.read") -> clusterClientRatelimit("brexit-mgmt-test-dagordon_api-classification-status_GET",
      10000, "1m", "Authorization") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")'
    zalando.org/skipper-predicate: Weight(3) && Path("/api/classification-status")
      && Method("GET") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2021-06-10T09:22:08Z"
  generation: 1
  labels:
    controller-uid: af1b8cad-f056-41e7-8e1a-388067925e31
    deployment-id: d-gk3e82tg9rbua8u7epih6sm1t
    pipeline-id: l-ngeow7caio7qdeiqsrnrfprjh
  name: brexit-mgmt-test-dagordon-get-api-classification-status-rl-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: brexit-mgmt-test-dagordon
    uid: af1b8cad-f056-41e7-8e1a-388067925e31
  resourceVersion: "1357488320"
  uid: a4a2d50b-76d0-48cd-afee-f7075c1fe583
spec:
  rules:
  - host: brexit-mgmt-test-dagordon.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: brexit-mgmt-test-dagordon
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
